Vectorize decoding of RleBitPackingHybridDecoder in parquet
Benchmark                                                  (bitWidth)  (dataSet)   Mode  Cnt   Scalar score      Vector score       Units
BenchmarkRleBitPackingDecoder.rleBitPackingHybridDecoder            1     RANDOM  thrpt   10   431.983 ±  9.014   657.649 ± 11.194  ops/s
BenchmarkRleBitPackingDecoder.rleBitPackingHybridDecoder            2     RANDOM  thrpt   10   466.912 ±  8.532   782.248 ± 18.346  ops/s
BenchmarkRleBitPackingDecoder.rleBitPackingHybridDecoder            3     RANDOM  thrpt   10   455.734 ±  7.936   464.078 ±  9.967  ops/s
BenchmarkRleBitPackingDecoder.rleBitPackingHybridDecoder            4     RANDOM  thrpt   10   497.933 ±  6.269   827.545 ±  9.352  ops/s
BenchmarkRleBitPackingDecoder.rleBitPackingHybridDecoder            5     RANDOM  thrpt   10   416.496 ±  4.669   472.437 ± 10.849  ops/s
BenchmarkRleBitPackingDecoder.rleBitPackingHybridDecoder            6     RANDOM  thrpt   10   393.198 ±  5.580   528.067 ± 17.039  ops/s
BenchmarkRleBitPackingDecoder.rleBitPackingHybridDecoder            7     RANDOM  thrpt   10   363.098 ±  4.287   508.503 ±  8.719  ops/s
BenchmarkRleBitPackingDecoder.rleBitPackingHybridDecoder            8     RANDOM  thrpt   10   559.706 ±  9.913  1792.319 ± 34.512  ops/s
BenchmarkRleBitPackingDecoder.rleBitPackingHybridDecoder            9     RANDOM  thrpt   10   320.672 ±  3.733   503.327 ± 10.736  ops/s
BenchmarkRleBitPackingDecoder.rleBitPackingHybridDecoder           10     RANDOM  thrpt   10   305.593 ±  4.737   506.062 ±  8.466  ops/s
BenchmarkRleBitPackingDecoder.rleBitPackingHybridDecoder           11     RANDOM  thrpt   10   251.403 ±  3.211   497.796 ± 10.027  ops/s
BenchmarkRleBitPackingDecoder.rleBitPackingHybridDecoder           12     RANDOM  thrpt   10   308.967 ±  5.143   496.255 ± 11.401  ops/s
BenchmarkRleBitPackingDecoder.rleBitPackingHybridDecoder           13     RANDOM  thrpt   10   256.819 ±  3.515   490.004 ± 17.273  ops/s
Benchmar